# fit

./: .fallowrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  updater.json
.github/: changelog-config.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_feedback.rs  lib.rs  portable.rs  settings.rs
src-tauri/src/audio_toolkit/audio/: device.rs  recorder.rs
src-tauri/src/commands/: audio.rs  clipboard.rs  filesystem.rs  git.rs  mod.rs  models.rs  ports.rs  pty.rs  shell.rs  speech.rs  state.rs  transcription.rs
src-tauri/src/managers/: audio.rs  model.rs  transcription.rs
src/components/editor/: CodeEditor.tsx  DiffView.tsx
src/components/layout/: AboutModal.tsx  DictationPopup.tsx  DiffSidebar.tsx  FileContextMenu.tsx  FileDrawer.tsx  GitPanel.tsx  LeftSidebar.tsx  Loader.tsx  MainContent.tsx  ResizeHandle.tsx  SessionContextMenu.tsx  SessionPanel.tsx  SettingsModal.tsx  SpeechOverlay.tsx  TabBar.tsx  TextParticle.tsx  TitleBar.tsx  UnsavedChangesDialog.tsx  UpdateModal.tsx  WelcomeScreen.tsx  WorkspaceBar.tsx  WorkspaceEditModal.tsx  WorkspaceMenu.tsx
src/components/preview/: LivePreview.tsx
src/components/terminal/: TerminalGrid.tsx  TerminalInstance.tsx
src/hooks/: useDictation.ts
src/i18n/: index.tsx
src/stores/: appStore.tsx
src/types/: index.ts
src/utils/: fileIcons.tsx  generateId.ts  ipc.ts
